test_regress/t/t_pp_misdef_bad.out
%Error: t/t_pp_misdef_bad.v:12:4: Define or directive not defined: '`NDEFINED'
                                : ... Suggested alternative: '`DEFINED'
   12 |    `NDEFINED
      |    ^~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_pp_misdef_bad.v:15:6: Define or directive not defined: '`imescale'
                                : ... Suggested alternative: '`timescale'
   15 |      `imescale
      |      ^~~~~~~~~
%Error: Exiting due to
